# primjs

./: BUILD.gn  CMakeLists.txt  DEPS  PrimJS.podspec  Primjs.gni  config.gni
.github/actions/get-latest-tag/: action.yml
.github/workflows/: android-release.yml  ci.yml  harmony-release.yml  publish-pod.yml  test-harmony.yml
Android/app/: build.gradle
docs/: benchmark.md
harmony/: build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/AppScope/: app.json5
harmony/primjs/: .gitignore  CMakeLists.txt  README.md  build-profile.json5  cliff.toml  oh-package.json5
harmony/primjs/src/main/: module.json5
harmony/scripts/: build.py
src/gc/: allocator.cc  allocator.h  collector.cc  collector.h  sweeper.cc  thread_pool.h  trace-gc.h
src/inspector/: debugger_inner.h  debugger_struct.h  interface.h
src/inspector/cpuprofiler/: profile_generator.cc  profiler_time.h
src/inspector/debugger/: debugger.cc  debugger.h  debugger_breakpoint.cc  debugger_callframe.cc  debugger_callframe.h  debugger_properties.cc
src/inspector/heapprofiler/: entry.h  heapexplorer.cc
src/inspector/runtime/: runtime.cc
src/interpreter/primjs/android/: embedded-inspector.S  embedded.S
src/interpreter/primjs/ios/: embedded-inspector.S  embedded.S
src/interpreter/primjs/mac/: embedded-inspector.S  embedded.S
src/interpreter/quickjs/: BUILD.gn
src/interpreter/quickjs/include/: bignum.h  cutils.h  dtoa.h  list.h  quickjs-atom.h  quickjs-inner.h  quickjs-opcode.h  quickjs-tag.h  quickjs.h
src/interpreter/quickjs/source/: bignum.cc  cutils.cc  dtoa.cc  libregexp.cc  quickjs.cc  quickjs_gc.cc
src/napi/: js_native_api.h  js_native_api_types.h  napi.cc  napi.h
src/napi/adapter/: BUILD.gn  js_native_api_adapter.cc  js_native_api_adapter.h
src/napi/env/: napi_env.cc  napi_runtime.cc  napi_runtime.h
src/napi/harmony/: js_native_api_harmony.cc  js_native_api_harmony.h  napi_env_harmony.h
src/napi/internal/: primjs_napi_defines.h  primjs_napi_undefs.h
src/napi/jsc/: js_native_api_JavaScriptCore.cc  js_native_api_JavaScriptCore.h  napi_env_jsc.h
src/napi/quickjs/: js_native_api_QuickJS.cc
src/napi/v8/: js_native_api_v8.cc  js_native_api_v8.cc.h  js_native_api_v8.h
testing/napi/: BUILD.gn
testing/quickjs/: test262.conf  test262_errors.txt
testing/quickjs/compiler/: qjs.cc  test_common.cc  test_debug_base.cc  test_debug_base.h  test_debug_common.cc  test_debug_complex_properties.cc  test_debug_parse_script_flag.cc  test_debug_pause.cc  test_debug_step.cc  test_quickjs_cpu_profiler.cc  test_shared_context_debug.cc
